--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-  
+
+body {
+    @apply bg-white text-black;
+}
+
+body.dark {
+    @apply bg-black text-white;
+}
